apps/base/redirects/plex/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.7.2
    ports:
      - name: plex-tcp
        port: 32400
        protocol: TCP
      - name: plex-udp
        port: 32400
        protocol: UDP
