apps/base/redirects/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: redirects
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: plex-tcp
      port: 32400
      protocol: TCP
      targetPort: 32400
    - name: plex-udp
      port: 32400
      protocol: UDP
      targetPort: 32400
  sessionAffinity: None
  type: ClusterIP
