apps/base/redirects/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400,403,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505" # removed 401
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine DetectionOnly
  name: plex
  namespace: redirects
spec:
  ingressClassName: nginx-public
  rules:
    - host: plex.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  name: plex-tcp
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plex.christensencloud.us
      secretName: plex-christensencloud.us-tls
