apps/base/redirects/plex/add-plex-port-to-ingress-controller.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-plex-port-to-ingress-nginx-svc
spec:
  background: true
  rules:
    - name: add-plex-port
      match:
        resources:
          kinds:
            - Service
          names:
            - ingress-nginx-public-controller
          namespaces:
            - ingress-nginx-public
      mutate:
        patchStrategicMerge:
          spec:
            ports:
              - name: plex-tcp
                port: 32400
                targetPort: 32400
                protocol: TCP
              - name: plex-udp
                port: 32400
                targetPort: 32400
                protocol: UDP
