apps/base/redirects/plex/ingress-open-plex-port.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-open-plex-port
spec:
  background: true
  rules:
    - name: add-plex-port
      match:
        resources:
          kinds:
            - Service
          names:
            - ingress-nginx-controller
          namespaces:
            - ingress-nginx
      mutate:
        patchStrategicMerge:
          spec:
            ports:
              - name: plex-tcp
                port: 32400
                targetPort: 32400
                protocol: TCP
              - name: plex-udp
                port: 32400
                targetPort: 32400
                protocol: UDP
